# album-builder

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  ROADMAP.md  install.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  uninstall.sh
.ants/: project.json
docs/plans/: 2026-04-27-phase-1-foundation.md  2026-04-28-phase-2-albums.md  2026-04-28-phase-3a-playback.md  2026-04-30-phase-3b-lyrics.md  2026-05-01-phase-5-track-usage-indicator.md
docs/specs/: 00-app-overview.md  01-track-library.md  02-album-lifecycle.md  03-album-switcher.md  04-track-selection.md  05-track-ordering.md  06-audio-playback.md  07-lyrics-alignment.md  08-album-export.md  09-approval-report.md  10-persistence.md  11-theme-icon.md  12-packaging.md  13-track-usage-indicator.md  14-playback-queue.md  15-library-playback-wiring.md  16-transport-controls.md
packaging/: album-builder.desktop.in
src/album_builder/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_app.py  test_main_window_usage.py
tests/domain/: test_album.py  test_library.py  test_lyrics.py  test_play_queue.py  test_slug.py  test_track.py
tests/persistence/: test_TC_10_atomic_pair.py  test_album_io.py  test_atomic_io.py  test_debounce.py  test_lrc_io.py  test_schema.py  test_settings.py  test_state_io.py
tests/services/: test_TC_08_export.py  test_TC_09_report.py  test_TC_13_usage_index.py  test_album_store.py  test_alignment_service.py  test_alignment_status.py  test_alignment_worker.py  test_library_watcher.py  test_lyrics_tracker.py  test_playback_controller.py  test_player.py
tests/ui/: conftest.py  test_TC_06_17_18_19_row_play_pause.py  test_TC_06_20_to_26_row_body_preview.py  test_TC_07_16_lyrics_panel_fills_pane.py  test_TC_13_library_pane_usage_column.py  test_TC_13_palette_contrast.py  test_album_order_pane.py  (+15 more)
(+38 files in other folders)
