[project]
name = "album-builder"
version = "0.2.1"
description = "Curate albums from a folder of audio recordings"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
qt_api = "pyqt6"
pythonpath = ["src"]
